[gd_scene load_steps=5 format=3 uid="uid://emf8dlhhea7n"]

[ext_resource type="Script" path="res://scenes/script/fall_platform.gd" id="1_gq0jn"]
[ext_resource type="Texture2D" uid="uid://conmt30rcr110" path="res://Assets/Grounds/Buildings.png" id="2_1wtow"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_spidm"]
size = Vector2(65, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ukb7g"]
size = Vector2(65, 15)

[node name="fall_platform" type="RigidBody2D"]
lock_rotation = true
freeze = true
script = ExtResource("1_gq0jn")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_1wtow")
region_enabled = true
region_rect = Rect2(0, 120, 65, 14)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_spidm")

[node name="DetectionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2(-0.5, -0.5)
shape = SubResource("RectangleShape2D_ukb7g")
debug_color = Color(0.344134, 0.613859, 0.268141, 0.42)

[node name="Timer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.5
one_shot = true

[node name="Eliminación_recursos" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Eliminación_recursos" to="." method="_on_eliminación_recursos_timeout"]
